<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ex18</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	
    <string name="tv_hobby">당신의 취미는?</string>
    <string name="ch1_hobby">운동</string>
    <string name="ch2_hobby">요리</string>
    <string name="ch3_hobby">독서</string>
    <string name="ch4_hobby">여행</string>
</resources>
