<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kosta.ex18.MainActivity" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hobby" />

    <CheckBox 
        android:id="@+id/ch1_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ch1_hobby"
        android:layout_below="@id/tv"/>
    
    <CheckBox 
        android:id="@+id/ch2_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ch2_hobby"
        android:layout_below="@id/ch1_hobby"/>
    
    <CheckBox 
        android:id="@+id/ch3_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ch3_hobby"
        android:layout_below="@id/ch2_hobby"/>
    
    <CheckBox 
        android:id="@+id/ch4_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ch4_hobby"
        android:layout_below="@id/ch3_hobby"/>
</RelativeLayout>
